--- a/main/page.html
+++ b/main/page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--设置字符编码，防止乱码-->
@@ -11,12 +12,12 @@
     <!--到入自己写的js page.js，跟iOS导入.h文件-->
     <script src="page.js"></script>
 </head>
+
+
 <body>
 <ol>
-    <li>列表1</li>
-    <li>列表2</li>
-    <li>列表3</li>
+
 </ol>
-<button id="btn2">添加列表项</button>
+<button id="btn2">获取今日头条的信息</button>
 </body>
 </html>
